--- a/chapter7.ipynb
+++ b/chapter7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "                 weights=None)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,9 +94,9 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression 0.864\n",
-      "RandomForestClassifier 0.896\n",
+      "RandomForestClassifier 0.904\n",
       "SVC 0.896\n",
-      "VotingClassifier 0.92\n"
+      "VotingClassifier 0.912\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.928"
+       "0.904"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.928"
+       "0.92"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,25 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.34146341, 0.65853659],\n",
-       "       [0.40789474, 0.59210526],\n",
-       "       [0.9974026 , 0.0025974 ],\n",
-       "       [0.01507538, 0.98492462],\n",
-       "       [0.02544529, 0.97455471],\n",
-       "       [0.1031746 , 0.8968254 ],\n",
-       "       [0.39572193, 0.60427807],\n",
-       "       [0.05943152, 0.94056848],\n",
-       "       [0.94683544, 0.05316456],\n",
-       "       [0.84210526, 0.15789474]])"
+       "array([[0.36989796, 0.63010204],\n",
+       "       [0.39480519, 0.60519481],\n",
+       "       [0.99738903, 0.00261097],\n",
+       "       [0.01985112, 0.98014888],\n",
+       "       [0.03208556, 0.96791444],\n",
+       "       [0.10362694, 0.89637306],\n",
+       "       [0.38860104, 0.61139896],\n",
+       "       [0.08638743, 0.91361257],\n",
+       "       [0.96083551, 0.03916449],\n",
+       "       [0.84455959, 0.15544041]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0.92"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.92"
+       "0.912"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sepal length (cm) 0.10727923617166575\n",
-      "sepal width (cm) 0.02523032807704551\n",
-      "petal length (cm) 0.4199219968963414\n",
-      "petal width (cm) 0.4475684388549473\n"
+      "sepal length (cm) 0.10287764449179186\n",
+      "sepal width (cm) 0.025498188210672703\n",
+      "petal length (cm) 0.4308152387194749\n",
+      "petal width (cm) 0.44080892857806037\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "                   learning_rate=0.1, n_estimators=1200, random_state=None)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "0.912"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "                          validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -430,13 +430,13 @@
        "                          max_features=None, max_leaf_nodes=None,\n",
        "                          min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                          min_samples_leaf=1, min_samples_split=2,\n",
-       "                          min_weight_fraction_leaf=0.0, n_estimators=68,\n",
+       "                          min_weight_fraction_leaf=0.0, n_estimators=98,\n",
        "                          n_iter_no_change=None, presort='auto',\n",
        "                          random_state=None, subsample=1.0, tol=0.0001,\n",
        "                          validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,36 +492,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-66-0ec5db9730ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# GBRT with xgboost\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mxgb_reg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgboost\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSGBRegressor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mxgb_reg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meval_set\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mearly_stopping_rounds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15:31:09] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[0]\tvalidation_0-rmse:0.217726\n",
+      "Will train until validation_0-rmse hasn't improved in 5 rounds.\n",
+      "[1]\tvalidation_0-rmse:0.195858\n",
+      "[2]\tvalidation_0-rmse:0.176672\n",
+      "[3]\tvalidation_0-rmse:0.158409\n",
+      "[4]\tvalidation_0-rmse:0.1441\n",
+      "[5]\tvalidation_0-rmse:0.130353\n",
+      "[6]\tvalidation_0-rmse:0.116994\n",
+      "[7]\tvalidation_0-rmse:0.104779\n",
+      "[8]\tvalidation_0-rmse:0.093952\n",
+      "[9]\tvalidation_0-rmse:0.084606\n",
+      "[10]\tvalidation_0-rmse:0.076869\n",
+      "[11]\tvalidation_0-rmse:0.070128\n",
+      "[12]\tvalidation_0-rmse:0.063242\n",
+      "[13]\tvalidation_0-rmse:0.057757\n",
+      "[14]\tvalidation_0-rmse:0.052532\n",
+      "[15]\tvalidation_0-rmse:0.048048\n",
+      "[16]\tvalidation_0-rmse:0.044706\n",
+      "[17]\tvalidation_0-rmse:0.04182\n",
+      "[18]\tvalidation_0-rmse:0.038757\n",
+      "[19]\tvalidation_0-rmse:0.036686\n",
+      "[20]\tvalidation_0-rmse:0.034648\n",
+      "[21]\tvalidation_0-rmse:0.033233\n",
+      "[22]\tvalidation_0-rmse:0.031889\n",
+      "[23]\tvalidation_0-rmse:0.030471\n",
+      "[24]\tvalidation_0-rmse:0.029592\n",
+      "[25]\tvalidation_0-rmse:0.028885\n",
+      "[26]\tvalidation_0-rmse:0.028079\n",
+      "[27]\tvalidation_0-rmse:0.027689\n",
+      "[28]\tvalidation_0-rmse:0.027158\n",
+      "[29]\tvalidation_0-rmse:0.026906\n",
+      "[30]\tvalidation_0-rmse:0.026768\n",
+      "[31]\tvalidation_0-rmse:0.026714\n",
+      "[32]\tvalidation_0-rmse:0.026607\n",
+      "[33]\tvalidation_0-rmse:0.026517\n",
+      "[34]\tvalidation_0-rmse:0.026544\n",
+      "[35]\tvalidation_0-rmse:0.026438\n",
+      "[36]\tvalidation_0-rmse:0.026439\n",
+      "[37]\tvalidation_0-rmse:0.026396\n",
+      "[38]\tvalidation_0-rmse:0.026315\n",
+      "[39]\tvalidation_0-rmse:0.026312\n",
+      "[40]\tvalidation_0-rmse:0.026296\n",
+      "[41]\tvalidation_0-rmse:0.026335\n",
+      "[42]\tvalidation_0-rmse:0.026252\n",
+      "[43]\tvalidation_0-rmse:0.026278\n",
+      "[44]\tvalidation_0-rmse:0.026261\n",
+      "[45]\tvalidation_0-rmse:0.026238\n",
+      "[46]\tvalidation_0-rmse:0.026235\n",
+      "[47]\tvalidation_0-rmse:0.026225\n",
+      "[48]\tvalidation_0-rmse:0.026242\n",
+      "[49]\tvalidation_0-rmse:0.026221\n",
+      "[50]\tvalidation_0-rmse:0.026233\n",
+      "[51]\tvalidation_0-rmse:0.026263\n",
+      "[52]\tvalidation_0-rmse:0.026289\n",
+      "[53]\tvalidation_0-rmse:0.026316\n",
+      "[54]\tvalidation_0-rmse:0.026342\n",
+      "Stopping. Best iteration:\n",
+      "[49]\tvalidation_0-rmse:0.026221\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0006875468151000879"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# GBRT with xgboost\n",
+    "# GBRT with early stopping with xgboost \n",
     "import xgboost\n",
     "\n",
-    "xgb_reg = xgboost.SGBRegressor()\n",
-    "xgb_reg.fit(x_train, y_train, eval_set=[(x_val, y_val)], early_stopping_rounds=5)\n",
-    "y_pred = xgb_reg.pred(x_val)"
+    "xgb_reg = xgboost.XGBRegressor()\n",
+    "xgb_reg.fit(x_train, y_train, eval_set=[(x_val, y_val)], \n",
+    "            early_stopping_rounds=5)\n",
+    "y_pred = xgb_reg.predict(x_val)\n",
+    "mean_squared_error(y_pred, y_val)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
