todo: fine tune to .98 precision
Tune learning rate, use tensorboard

--- a/chapter10exercises.ipynb
+++ b/chapter10exercises.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "# Model architecture\n",
+    "# Model Architecture\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Flatten, Dense\n",
     "\n",
