--- a/chapter12.ipynb
+++ b/chapter12.ipynb
@@ -864,10 +864,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert a function into tensorflow(tm) function\n",
+    "#(tensorflow will optimizes the computational stuff)\n",
+    "def cube(x):\n",
+    "    return x**3\n",
+    "\n",
+    "tf_cube = tf.function(cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alternatively and more common way\n",
+    "@tf.function\n",
+    "def tf_cube(x):\n",
+    "    return x**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(computation graphs are reused for tensors with same shape)\n",
+    "#(new graph is generated for each Python value passed, only use Python value for arguements with few unique values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Autograph and Tracing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"def tf__tf_cube(x):\\n  do_return = False\\n  retval_ = ag__.UndefinedReturnValue()\\n  with ag__.FunctionScope('tf_cube', 'tf_cube_scope', ag__.ConversionOptions(recursive=True, user_requested=True, optional_features=(), internal_convert_user_code=True)) as tf_cube_scope:\\n    do_return = True\\n    retval_ = tf_cube_scope.mark_return_value(x ** 3)\\n  do_return,\\n  return ag__.retval(retval_)\\n\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.autograph.to_code(tf_cube.python_function)   #the source code read by tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Side notes\n",
+    "#(graphs will only have TensorFlow constructs/does not include calling library)\n",
+    "#(it is preferable to create variables with something like build() method and update with assign instead of using '=')\n",
+    "#(only for loop over a tensor/dataset will be graphed)\n",
+    "#(use vectorized calculations over loops)"
+   ]
   }
  ],
  "metadata": {
