--- a/chapter15.ipynb
+++ b/chapter15.ipynb
@@ -975,7 +975,7 @@
         "# GRU cell\n",
         "#(a peephole variant)\n",
         "#(both states are in 1 output vector)\n",
-        "#(1 gate do both forgetting and adding, so only forgetting ỏ adding one at a time)\n",
+        "#(1 gate do both forgetting and adding)\n",
         "#(a seperate gate controls the previous state)"
       ],
       "execution_count": 0,
