--- a/chapter16.ipynb
+++ b/chapter16.ipynb
@@ -1855,6 +1855,108 @@
     "outputs, _, _ = decoder(embedding_decoder, start_tokens=start_tokens, end_token=end_token,\n",
     "                       initial_state=secoder_initial_state)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attention Mechanisms\n",
+    "#(the encoder will output all the hidden states)\n",
+    "#(the hidden states will go through an attention layer/alignment model/a small neural net)\n",
+    "#(the hidden states are given weights to decide which one/word is important to the decoder at that time step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Luong attention\n",
+    "attention_mechanism = tfa.seq2seq.attention_wrapper.LuongAttention(\n",
+    "    units, encoder_state, memory_sequence_length=encoder_sequence_length)\n",
+    "attention_decoder_cell = tfa.tfa.seq2seq.attention_wrapper.AttentionWrapper(\n",
+    "    decoder_cell, attention_mechanism, attention_layer_size=n_units)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transformer architecture\n",
+    "#(stacks of encoder and decoder cells)\n",
+    "#(uses multihead-attention/self-attention: encodes the relationship between words in the input sentence)\n",
+    "#(decoder also has another self-attention but only attend to the left (masked mh-attention))\n",
+    "#(use positional embedding to represent the position of a word in the sentence)\n",
+    "#(the positional embedding is added to the embedding of the respective word)\n",
+    "#(each word is represented across i dimensions with sin and cos functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(keras.layers.Layer):\n",
+    "    def __init__(self, max_steps, max_dims, dtype=tf.float32, **kwargs):\n",
+    "        super().__init__(dtype=dtype, **kwargs)\n",
+    "        if max_dims % 2 == 1: max_dims += 1   # must be even number of dimensions\n",
+    "        p, i = np.meshgrid(np.arrange(max_steps), np.arrange(max_dims//2))\n",
+    "        pos_emb = np.empty((1, max_steps, max_dims))\n",
+    "        pos_emb[0, :, ::2] = np.sin(p / 10000**(2 * i / max_dims)).T\n",
+    "        pos_emb[0, :, 1::2] = np.cos(p / 10000**(2 * i / max_dims)).T\n",
+    "        self.positional_embedding = tf.constant(pos_emb.astype(self.dtype))\n",
+    "    def call(self, inputs):\n",
+    "        shape = tf.shape(inputs)\n",
+    "        return inputs + self.positional_embedding[:, :shape[-2], :shape[-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaled dot product attention\n",
+    "#(K and V are outputs of the encoder, Q is the previous decoder output)\n",
+    "#(dot product Q with K, scale them, then apply softmax, the outputs are weights of the values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi Head Attention\n",
+    "#(many sdp attention layers)\n",
+    "#(learn linear projections for Q, K, V dimensions and do attention on them)\n",
+    "#(outputs are concatenated and linear projected)\n",
+    "#(each attention layer is responsible for a part of the full model dimensions)\n",
+    "#(queries, keys, and values come from different places in different places)\n",
+    "#(e-d attention: similar to scaled dot product)\n",
+    "#(self-attention in encoder: K,, V, Q are the previous encoder output)\n",
+    "#(self-attention in decoder: similar to encoder setting but only looking to the left)\n",
+    "#(kind of like convolutional layers but moore specific to the sentence(?))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# More papers\n",
+    "# ELMo: Matthew Peters \"Deep Contextualized Word Representations\"\n",
+    "# ULMFiT: Jeremy Howard “Universal Language Model Fine-Tuning for Text Classification”\n",
+    "# GPT: Alec Radford “Improving Language Understanding by Generative Pre-Training”\n",
+    "# BERT: Jacob Devlin “BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding”"
+   ]
   }
  ],
  "metadata": {
