unfinished coding section

--- a/chapter14exercises.ipynb
+++ b/chapter14exercises.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Decrease batch size, scale down image, scale down architecture, optimize code, distributing compute"
+    "# 3. Decrease batch size, scale down image, scale down architecture, optimize code, distributing computation"
    ]
   },
   {
